--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,7 +1,7 @@
 {% if page.layout == "home-infographic" and site.data.theme.featured-image %}
 <style>
 #home-banner {
-    background-image: url('{% include image/featured-image.html %}');
+    background-image: url(https://apicms.thestar.com.my/uploads/images/2023/12/30/thumbs/700/2464688.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: {{ site.data.theme.home-banner-image-position | default: 'center' }};
