--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,7 +1,7 @@
 {% if page.layout == "home-infographic" and site.data.theme.featured-image %}
 <style>
 #home-banner {
-    background-image: url(https://apicms.thestar.com.my/uploads/images/2023/12/30/thumbs/700/2464688.webp);
+    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fkids-library&psig=AOvVaw0mrMTQMxjy_CQGm7bA5vap&ust=1752135883717000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJif4_isr44DFQAAAAAdAAAAABAV);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: {{ site.data.theme.home-banner-image-position | default: 'center' }};
